--- a/output/cnlsy_predict.tex
+++ b/output/cnlsy_predict.tex
@@ -1,27 +1,23 @@
 \begin{tabular}{lccc} \hline
- & (1) & (2) & (3) \\
- & cnlsyZ & cnlsyZX & cnlsyZL \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  \\
-male & 6,035.167*** & 6,076.817*** & 2,848.271* \\
+ & (1) & (2) & (3) \\ \midrule
+Male & 6,035.167*** & 6,076.817*** & 2,848.271* \\
  & (1,187.329) & (1,090.286) & (1,511.141) \\
-black & -9,285.510*** & -4,534.764*** & -1,949.783 \\
+Black & -9,285.510*** & -4,534.764*** & -1,949.783 \\
  & (1,179.675) & (1,092.219) & (1,460.488) \\
-m\_ed0y & 2,396.355*** & 262.807 & -220.899 \\
+Mother's Education & 2,396.355*** & 262.807 & -220.899 \\
  & (333.230) & (324.874) & (464.989) \\
-piatmath &  & 148.468*** & 132.704* \\
+PIAT (5-7) &  & 148.468*** & 132.704* \\
  &  & (54.301) & (78.451) \\
-years\_30y &  & 3,928.574*** & 2,682.560*** \\
+Education (30) &  & 3,928.574*** & 2,682.560*** \\
  &  & (276.850) & (539.888) \\
-si21y\_inc\_labor &  & 0.579*** & 0.286*** \\
+Labor Income (21) &  & 0.579*** & 0.286*** \\
  &  & (0.058) & (0.079) \\
-si34y\_bmi &  & -21.917 & -191.210* \\
+BMI (34)&  & -21.917 & -191.210* \\
  &  & (78.862) & (108.666) \\
-inc\_labor28 &  &  & 0.431*** \\
+Labor Income (28) &  &  & 0.431*** \\
  &  &  & (0.087) \\
 Constant & 1,694.816 & -48,148.884*** & -27,741.389*** \\
- & (3,896.674) & (5,998.816) & (8,806.153) \\
- &  &  &  \\
+ & (3,896.674) & (5,998.816) & (8,806.153) \\ \\ \midrule
 Observations & 1,424 & 1,424 & 628 \\
- R-squared & 0.102 & 0.309 & 0.482 \\ \hline
+$R^2$ & 0.102 & 0.309 & 0.482 \\ \bottomrule
 \end{tabular}
