--- a/output/cnlsy_predict_ready.tex
+++ b/output/cnlsy_predict_ready.tex
@@ -1,24 +1,23 @@
 \begin{tabular}{lccc} \hline
  & (1) & (2) & (3) \\ \midrule
-Male & 8,759.138*** & 8,221.685*** & 2,496.613 \\
- & (1,162.559) & (1,257.294) & (1,677.614) \\
-Black & -8,776.987*** & -4,259.323*** & -1,156.279 \\
- & (1,133.175) & (1,267.760) & (1,486.337) \\
-Mother's Education & 2,356.985*** & 286.994 & -31.465 \\
- & (324.694) & (386.167) & (533.746) \\
-PIAT (5-7) &  & 218.707*** & 150.505* \\
- &  & (60.409) & (80.262) \\
-Education (30) &  & 3,759.419*** & 2,361.059*** \\
- &  & (359.226) & (597.189) \\
-Labor Income (21) &  & 0.580*** & 0.199** \\
- &  & (0.068) & (0.081) \\
-BMI (34) &  & -123.924 & -220.034** \\
- &  & (83.036) & (107.971) \\
-Labor Income (28) &  &  & 0.534*** \\
- &  &  & (0.081) \\
-Constant & 1,153.455 & -50,441.567*** & -28,134.257*** \\
- & (3,655.393) & (6,870.964) & (9,601.924) \\
- &  &  &  \\ \\ \midrule
-Observations & 1,880 & 1,463 & 657 \\
-$R^2$ & 0.086 & 0.255 & 0.539 \\ \bottomrule
+Male & 6,035.167*** & 6,076.817*** & 2,848.271* \\
+ & (1,187.329) & (1,090.286) & (1,511.141) \\
+Black & -9,285.510*** & -4,534.764*** & -1,949.783 \\
+ & (1,179.675) & (1,092.219) & (1,460.488) \\
+Mother's Education & 2,396.355*** & 262.807 & -220.899 \\
+ & (333.230) & (324.874) & (464.989) \\
+PIAT (5-7) &  & 148.468*** & 132.704* \\
+ &  & (54.301) & (78.451) \\
+Education (30) &  & 3,928.574*** & 2,682.560*** \\
+ &  & (276.850) & (539.888) \\
+Labor Income (21) &  & 0.579*** & 0.286*** \\
+ &  & (0.058) & (0.079) \\
+BMI (34)&  & -21.917 & -191.210* \\
+ &  & (78.862) & (108.666) \\
+Labor Income (28) &  &  & 0.431*** \\
+ &  &  & (0.087) \\
+Constant & 1,694.816 & -48,148.884*** & -27,741.389*** \\
+ & (3,896.674) & (5,998.816) & (8,806.153) \\ \\ \midrule
+Observations & 1,424 & 1,424 & 628 \\
+$R^2$ & 0.102 & 0.309 & 0.482 \\ \bottomrule
 \end{tabular}
