--- a/output/nlsy_predict.tex
+++ b/output/nlsy_predict.tex
@@ -1,19 +1,15 @@
-\begin{tabular}{lccc} \hline
- & (1) & (2) & (3) \\
- & nlsyZ & nlsyZX & nlsyZL \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  \\
-male & 7,693.969*** & 8,841.633*** & 2,634.299*** \\
+\begin{tabular}{lccc} \toprule
+ & (1) & (2) & (3) \\ \midrule
+Male & 7,693.969*** & 8,841.633*** & 2,634.299*** \\
  & (445.608) & (410.361) & (301.102) \\
-black & -6,881.343*** & -6,003.412*** & -1,860.283*** \\
+Black & -6,881.343*** & -6,003.412*** & -1,860.283*** \\
  & (441.303) & (400.777) & (298.999) \\
-years\_30y &  & 2,733.341*** & 836.568*** \\
+Education (30) &  & 2,733.341*** & 836.568*** \\
  &  & (100.363) & (81.768) \\
-inc\_labor28 &  &  & 0.816*** \\
+Labor Income (28) &  &  & 0.816*** \\
  &  &  & (0.024) \\
 Constant & 17,296.696*** & -19,781.627*** & -6,675.758*** \\
- & (345.575) & (1,347.479) & (1,000.243) \\
- &  &  &  \\
+ & (345.575) & (1,347.479) & (1,000.243) \\ \\ \midrule
 Observations & 7,834 & 7,834 & 7,095 \\
- R-squared & 0.110 & 0.258 & 0.691 \\ \hline
+ R-squared & 0.110 & 0.258 & 0.691 \\ \bottomrule
 \end{tabular}
