--- a/output/psid_predict.tex
+++ b/output/psid_predict.tex
@@ -1,19 +1,15 @@
-\begin{tabular}{lccc} \hline
- & (1) & (2) & (3) \\
- & psidZ & psidZX & psidZL \\
-VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
- &  &  &  \\
-male & 17,871.023*** & 18,732.804*** & 7,171.313*** \\
+\begin{tabular}{lccc} \toprule
+ & (1) & (2) & (3) \\ \\ \midrule
+Male & 17,871.023*** & 18,732.804*** & 7,171.313*** \\
  & (457.333) & (424.747) & (433.242) \\
-black & -10,784.781*** & -6,912.289*** & -1,822.333*** \\
+Black & -10,784.781*** & -6,912.289*** & -1,822.333*** \\
  & (449.371) & (407.671) & (340.576) \\
-years\_30y &  & 4,405.726*** & 1,756.096*** \\
+Education (30) &  & 4,405.726*** & 1,756.096*** \\
  &  & (106.166) & (104.231) \\
-inc\_labor28 &  &  & 0.752*** \\
+Labor Income (28) &  &  & 0.752*** \\
  &  &  & (0.014) \\
 Constant & 26,539.583*** & -32,861.064*** & -15,597.820*** \\
- & (355.336) & (1,368.509) & (1,257.559) \\
- &  &  &  \\
-Observations & 11,589 & 11,589 & 8,276 \\
- R-squared & 0.160 & 0.279 & 0.644 \\ \hline
+ & (355.336) & (1,368.509) & (1,257.559) \\ \\ \midrule
+ Observations & 11,589 & 11,589 & 8,276 \\
+$R^2$ & 0.160 & 0.279 & 0.644 \\ \hline
 \end{tabular}
