--- a/output/psid_predict_ready.tex
+++ b/output/psid_predict_ready.tex
@@ -1,16 +1,15 @@
 \begin{tabular}{lccc} \toprule
- & (1) & (2) & (3) \\ \midrule
-Male & 19,877.340*** & 20,336.227*** & 7,686.820*** \\
- & (404.768) & (390.549) & (411.552) \\
-Black & -9,761.792*** & -6,406.807*** & -1,793.755*** \\
- & (385.350) & (362.171) & (299.889) \\
-Education (30)  &  & 4,109.973*** & 1,619.779*** \\
- &  & (91.929) & (92.105) \\
-Labor Income (28) &  &  & 0.741*** \\
+ & (1) & (2) & (3) \\ \\ \midrule
+Male & 17,871.023*** & 18,732.804*** & 7,171.313*** \\
+ & (457.333) & (424.747) & (433.242) \\
+Black & -10,784.781*** & -6,912.289*** & -1,822.333*** \\
+ & (449.371) & (407.671) & (340.576) \\
+Education (30) &  & 4,405.726*** & 1,756.096*** \\
+ &  & (106.166) & (104.231) \\
+Labor Income (28) &  &  & 0.752*** \\
  &  &  & (0.014) \\
-Constant & 23,953.099*** & -30,187.589*** & -14,016.536*** \\
- & (289.118) & (1,167.401) & (1,080.036) \\
- &  &  &  \\ \\ \midrule
-Observations & 14,979 & 13,908 & 9,812 \\
-$R^2$ & 0.172 & 0.291 & 0.657 \\ \bottomrule
+Constant & 26,539.583*** & -32,861.064*** & -15,597.820*** \\
+ & (355.336) & (1,368.509) & (1,257.559) \\ \\ \midrule
+ Observations & 11,589 & 11,589 & 8,276 \\
+$R^2$ & 0.160 & 0.279 & 0.644 \\ \hline
 \end{tabular}
