--- a/Appendices/Crime.tex
+++ b/Appendices/Crime.tex
@@ -391,7 +391,7 @@ Some of the sources of cost estimates, such as the more serious crimes, result i
 \item We show estimates using arrest-based estimations versus sentence-based estimations, and find that the differences are large in terms of the number of crimes before victimization inflation, but small after it, and do not substantially change the total benefits calculations.
 \end{enumerate}
 
-\noindent In Figure \ref{fig:costs_schedules}, we present additional deviations from our main estimates. In particular, we show how the estimations change when two different cost schedules are used: (i) Top-down costs, and (ii) Bottom-up costs, assuming that the costs of murders and rapes are identical to the cost of an assault. We also note that BU costs are a ``conservative'' option in the sense that the effects of the program are higher using TD costs. We can also see that with no murders and rapes, the effect of the program on crime is still positive, but much smaller than when those crimes are considered. \\
+\noindent In Figure \ref{fig:costs_schedules}, we present additional deviations from our main estimates. In particular, we show how the estimations change when three different cost schedules are used: (i) Top-down costs, (ii) Bottom-up costs, and (iii) Bottom-up costs assuming that the costs of murders and rapes are identical to the cost of an assault. We also note that BU costs are a ``conservative'' option in the sense that the effects of the program are higher using TD costs. We can also see that with no murders and rapes, the effect of the program on crime is still positive, but much smaller than when those crimes are considered. \\
 
 \begin{figure} [H]
 \caption{Different Cost Schedules}
@@ -402,7 +402,8 @@ Some of the sources of cost estimates, such as the more serious crimes, result i
 \noindent Note: This figure depicts the per capita cost for the different categories of costs and crimes we use, by control (C) and treatment (T). It presents some sensitivity analyses. The first pair of bars represents costs using the Bottom-up approach in Table \ref{tab:individual-crime-cost} to determine individual costs of crime. The second pair of bars represents costs using the Top-down approach in Table \ref{tab:individual-crime-cost} to determine individual costs of crime. The third pair of bars uses the Bottom-up approach, but replaces the values of murders and rapes with that of assaults.\\
 }\end{figure}
 
-\noindent Finally, in Figure \ref{fig:crime_discounting}, we present the effect that discounting and applying deadweight loss has on our estimates. The first pair of bars represents the cost estimates that are not discounted, the second pair of bars represents the discounted costs, and the third pair of bars represents the discounted costs including deadweight losses. It is clear that the effect of discounting is substantial, approximately halving the total cost estimates. The effect of applying deadweight loss barely changes the estimates. The effect of deadweight loss is most noticeable in the value of miscellaneous crimes, which are only public costs. Regardless, its impact in the overall costs is minor. \\
+\noindent Finally, in Figure \ref{fig:crime_discounting}, we present the effect that discounting has on our estimates that have been adjusted for deadweight loss. The first pair of bars represents the deadweight loss-adjusted cost estimates that are not discounted, and the second pair of bars represents the deadweight loss-adjusted costs that have been discounted. It is clear that the effect of discounting is substantial, approximately halving the total cost estimates.\\
+% SM Comment: Discussion originally spoke about effect of adding DWL. However, this is irrelevant since both pairs have been adjusted for DWL, and thus, we cannot see impact of DWL between them.
 
 \begin{figure} [H]
 \caption{Effect of Discounting Crime Costs}
