--- a/output/nlsy_predict.tex
+++ b/output/nlsy_predict.tex
@@ -1,15 +1,19 @@
-\begin{tabular}{lccc} \toprule
- & (1) & (2) & (3) \\ \midrule
-Male & 7,693.969*** & 8,841.633*** & 2,634.299*** \\
- & (445.608) & (410.361) & (301.102) \\
-Black & -6,881.343*** & -6,003.412*** & -1,860.283*** \\
- & (441.303) & (400.777) & (298.999) \\
-Education (30) &  & 2,733.341*** & 836.568*** \\
- &  & (100.363) & (81.768) \\
-Labor Income (28) &  &  & 0.816*** \\
- &  &  & (0.024) \\
-Constant & 17,296.696*** & -19,781.627*** & -6,675.758*** \\
- & (345.575) & (1,347.479) & (1,000.243) \\ \\ \midrule
-Observations & 7,834 & 7,834 & 7,095 \\
- R-squared & 0.110 & 0.258 & 0.691 \\ \bottomrule
+\begin{tabular}{lccc} \hline
+ & (1) & (2) & (3) \\
+ & nlsyZ & nlsyZX & nlsyZL \\
+VARIABLES & si30y\_inc\_labor & si30y\_inc\_labor & si30y\_inc\_labor \\ \hline
+ &  &  &  \\
+male & 7,693.969*** & 8,841.633*** & 7,447.416*** \\
+ & (445.608) & (410.361) & (429.678) \\
+black & -6,881.343*** & -6,003.412*** & -4,581.288*** \\
+ & (441.303) & (400.777) & (435.746) \\
+years\_30y &  & 2,733.341*** & 2,839.201*** \\
+ &  & (100.363) & (105.775) \\
+inc\_labor21 &  &  & 0.671*** \\
+ &  &  & (0.047) \\
+Constant & 17,296.696*** & -19,781.627*** & -24,598.646*** \\
+ & (345.575) & (1,347.479) & (1,438.908) \\
+ &  &  &  \\
+Observations & 7,834 & 7,834 & 7,169 \\
+ R-squared & 0.110 & 0.258 & 0.305 \\ \hline
 \end{tabular}
