--- a/Appendices/Background.tex
+++ b/Appendices/Background.tex
@@ -203,7 +203,7 @@ afternoon snack all planned by a nutritionist.\footnote{\citet{Bryant_et_al_1987
 \noindent Note: This figure describes the take-up of alternative preschool by families in the CARE family education and control groups. The vertical axis represents the average number of months per year the subjects of the control group spent in alternative preschool. Subsidized centers were highly regulated and, therefore, relatively high-quality. Non-subsidized childcare services were center-based but not regulated. Other sources of childcare could have included care by parents, relatives, or non-relatives.}
 	\end{figure}
 	
-\subsubsection{Regulation}
+\subsubsection{Regulation}  \label{appendix:tetanus}
 
 \noindent During the period when both ABC and CARE were active, North Carolina had an active, high-quality system of public childcare for vulnerable families funded by several public programs. Examples include Title IV-A of the Social Service Administration (SSA), Aid to Families with Dependent Children (AFDC), and Title IV-B of Child Welfare Services. These funding efforts were amplified in 1975 by Title XX of the SSA, Social Services Block Grant, which was the main federal source of childcare financing in the U.S. when ABC and CARE were active.\footnote{\citet{Robins_1988_Federal-Child-Care}.}\\
 
