--- a/output/cnlsy_predict_ready.tex
+++ b/output/cnlsy_predict_ready.tex
@@ -1,5 +1,5 @@
-\begin{tabular}{lccc} \hline
- & (1) & (2) & (3) \\ \midrule
+\begin{tabular}{lccc} \toprule
+ & (1) & (2) & (3) \\ \midrule 
 Male & 6,035.167*** & 6,076.817*** & 2,848.271* \\
  & (1,187.329) & (1,090.286) & (1,511.141) \\
 Black & -9,285.510*** & -4,534.764*** & -1,949.783 \\
@@ -10,14 +10,14 @@ PIAT (5-7) &  & 148.468*** & 132.704* \\
  &  & (54.301) & (78.451) \\
 Education (30) &  & 3,928.574*** & 2,682.560*** \\
  &  & (276.850) & (539.888) \\
-Labor Income (21) &  & 0.579*** & 0.286*** \\
+Labor Income (21)&  & 0.579*** & 0.286*** \\
  &  & (0.058) & (0.079) \\
-BMI (34)&  & -21.917 & -191.210* \\
- &  & (78.862) & (108.666) \\
 Labor Income (28) &  &  & 0.431*** \\
  &  &  & (0.087) \\
+BMI (34)&  & -21.917 & -191.210* \\
+ &  & (78.862) & (108.666) \\
 Constant & 1,694.816 & -48,148.884*** & -27,741.389*** \\
  & (3,896.674) & (5,998.816) & (8,806.153) \\ \\ \midrule
-Observations & 1,424 & 1,424 & 628 \\
+ Observations & 1,424 & 1,424 & 628 \\
 $R^2$ & 0.102 & 0.309 & 0.482 \\ \bottomrule
 \end{tabular}
